Changelog for Collections.

Collections 2.2.2
===================
- Fixed rendering TV and Tagger columns with dash in name/alias

Collections 2.2.1
===================
- Fixed PHP 5.2 compatibility

Collections 2.2.0
===================
- Added an option to set position of Content field
- Added an options to set Tab's and New child's button label
- Added Collections.renderer.image for rendering images
- Added tabs to Collection views to split its settings
- Splitted Setting tab to vtabs for Resource settings and Collections settings
- Improved close button in collection's childs
- Fixed showing data in TV columns
- Added an option to permanently remove deleted resource
- Fixed duplicate action from context menu
- Added data controller to show resource owerview page
- Fix # being appended to manager url when clicking a button
- Fix strict standards error (PHP 5.4+) in resource/getlist processor
- Fix not working editlink on pagetitle click in grid

Collections 2.1.0
===================
- Added option to duplicate Collection's view
- Updated layout for create/update view's column
- Added view,update,delete,duplicate,publish items to children's grid context menu
- Added children default template, default resource type and allow resource type selection options to collection's templates
- Fixed View button
- Fixed logging messages from plugin

Collections 2.0.2
===================
- Fixed datetime renderers

Collections 2.0.1
===================
- Fixed saving collections container in Revolution 2.2.x

Collections 2.0.0
===================
- Added collections templates
- Added ability to create different child type from grid
- Support for Revolution 2.3

Collections 1.3.3
===================
- Remove debugger call :X

Collections 1.3.2
===================
- Hotfix for confirm navigation dialog
- Fixed selecting multiple rows
- Fixed checking for Tagger

Collections 1.3.1
===================
- Release with correct version number

Collections 1.3.0
===================